[package]
name = "sec_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# actix-web = "4.8.0"
http = "1.1.0"
# rand="0.8.5"
serde_json = "1.0.122"
serde_urlencoded = "0.7.1"
# xlsxwriter = "0.6.1"
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.39.2", features = ["full"] }
# futures = "0.3.30"
lazy_static = "1.5.0"
log = "0.4.22"
env_logger = "0.9"
